--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 
 <body>
-  <img height="160" src="image\thaisley_profile.jpg" alt="Foto do rosto de Thaisley">
+  <img height="160" src="images\thaisley_profile.jpg" alt="Foto do rosto de Thaisley">
   <h1>Thaisley Sayonara</h1>
   <p><em>Product Designer do</em> <strong><i> <a href="https://www.coompras.app/">Coompras</a></i></strong></p>
   <p>Ux designer, Analista de Sistemas Júnior.</p>
-  <p>Apaixonada pelo mundo digital e por adorar resolver problemas.</p>
+  <p>Apaixonada pelo mundo digital e adora resolver problemas.</p>
   <hr>
   <h3>Cursos</h3>
   <ul>
